Overflow issue fixed in messageUI

--- a/messageStyles.css
+++ b/messageStyles.css
@@ -4,12 +4,13 @@
     box-sizing: border-box;
     font-family: Arial, sans-serif;
     max-width: 100vw;
-    max-height: 100vw;
-    overflow-y: hidden;
+    max-height: 100vh;
+    
 }
 
 body, html {
     height: 100%;
+    overflow-y: hidden;
 }
 
 .app-container {
@@ -65,8 +66,7 @@ body, html {
     padding: 10px;
     display: flex;
     flex-direction: column;
-    overflow-y: scroll; /* Adds a vertical scrollbar when content overflows */
-    overflow-x: hidden; /
+    overflow-y: auto; /* Adds a vertical scrollbar when content overflows */
 }
 
 .search {
@@ -118,7 +118,6 @@ body, html {
     flex-grow: 1;
     padding: 10px;
     overflow-y: auto;
-    overflow-y: scroll;
     /* overflow-y: hidden; */
     overflow-x: hidden;
 }
